@@ -1,8 +1,15 @@
 package com.hango.hango_backend.service;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Arrays;
+import java.util.stream.Collectors;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -14,6 +21,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hango.hango_backend.dto.ExamResultAnalysisDTO;
 import com.hango.hango_backend.dto.GeminiGenerateRequest;
 import com.hango.hango_backend.dto.LearningPathwayResponseDTO;
+import com.hango.hango_backend.dto.MasteryQuestionDTO;
 import com.hango.hango_backend.dto.MentorActionRequestDTO;
 import com.hango.hango_backend.dto.PathwayGenerateRequestDTO;
 import com.hango.hango_backend.dto.PathwayNodeDTO;
@@ -21,6 +29,7 @@ import com.hango.hango_backend.dto.PathwayScheduleRequestDTO;
 import com.hango.hango_backend.entity.Course;
 import com.hango.hango_backend.entity.ExamAttempt;
 import com.hango.hango_backend.entity.LearningPathway;
+import com.hango.hango_backend.entity.Lesson;
 import com.hango.hango_backend.entity.PathwayNode;
 import com.hango.hango_backend.entity.User;
 import com.hango.hango_backend.exception.ApiException;
@@ -30,37 +39,56 @@ import com.hango.hango_backend.repository.LearningPathwayRepository;
 import com.hango.hango_backend.repository.LessonProgressRepository;
 import com.hango.hango_backend.repository.LessonRepository;
 import com.hango.hango_backend.repository.UserRepository;
+import com.hango.hango_backend.repository.EnrollmentRepository;
+import com.hango.hango_backend.entity.Enrollment;
 import com.hango.hango_backend.service.SkillCategoryMappingService;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class LearningPathwayService {
 
+    private static final String LESSON_TYPE_FINAL_QUIZ = "FINAL_QUIZ";
+    private static final String ATTEMPT_STATE_MASTERY = "MASTERY";
+    private static final int MASTERY_PASS_SCORE = 80;
+
+    private static final com.fasterxml.jackson.databind.ObjectMapper LENIENT_MAPPER = com.fasterxml.jackson.databind.json.JsonMapper.builder()
+            .enable(com.fasterxml.jackson.core.json.JsonReadFeature.ALLOW_UNQUOTED_FIELD_NAMES)
+            .enable(com.fasterxml.jackson.core.json.JsonReadFeature.ALLOW_TRAILING_COMMA)
+            .enable(com.fasterxml.jackson.core.json.JsonReadFeature.ALLOW_SINGLE_QUOTES)
+            .enable(com.fasterxml.jackson.core.json.JsonReadFeature.ALLOW_JAVA_COMMENTS)
+            .build()
+            .configure(com.fasterxml.jackson.databind.DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+
     private final LearningPathwayRepository learningPathwayRepository;
     private final ExamAttemptRepository examAttemptRepository;
     private final CourseRepository courseRepository;
     private final UserRepository userRepository;
+    private final EnrollmentRepository enrollmentRepository;
     private final GeminiClientService geminiClientService;
     private final ObjectMapper objectMapper;
     private final ExamResultAnalyzerService examResultAnalyzerService;
     private final LessonProgressRepository lessonProgressRepository;
     private final LessonRepository lessonRepository;
     private final SkillCategoryMappingService skillCategoryMappingService;
+    private final com.hango.hango_backend.repository.LessonQuizAttemptRepository quizAttemptRepository;
+    private final org.springframework.jdbc.core.JdbcTemplate jdbcTemplate;
 
     @Transactional
     public LearningPathwayResponseDTO generatePathway(Long studentId, PathwayGenerateRequestDTO requestDTO) {
         Long examAttemptId = requestDTO.getExamAttemptId();
+        // Khoa optimistic (findByIdForUpdate) tranh 2 request generate pathway song
+        // song
         User student = userRepository.findByIdForUpdate(studentId)
                 .orElseThrow(() -> new ApiException("User not found", HttpStatus.NOT_FOUND));
 
         ExamAttempt examAttempt = examAttemptRepository.findById(examAttemptId)
                 .orElseThrow(() -> new ApiException("Exam Attempt not found", HttpStatus.NOT_FOUND));
 
+        // Ownership check: attempt phai thuoc ve chinh student dang login
         if (!examAttempt.getStudent().getId().equals(studentId)) {
             throw new ApiException("Access denied to this exam attempt", HttpStatus.FORBIDDEN);
         }
@@ -73,10 +101,12 @@ public class LearningPathwayService {
                 .toList();
         boolean usingExistingCoursesFallback = publishedCourses.isEmpty();
         List<Course> availableCourses = usingExistingCoursesFallback ? allCourses : publishedCourses;
+        availableCourses = deduplicateCourseVersions(studentId, availableCourses);
 
         if (Boolean.TRUE.equals(requestDTO.getOnlyFree())) {
             availableCourses = availableCourses.stream()
-                    .filter(course -> course.getPrice() == null || course.getPrice().compareTo(java.math.BigDecimal.ZERO) == 0)
+                    .filter(course -> course.getPrice() == null
+                            || course.getPrice().compareTo(java.math.BigDecimal.ZERO) == 0)
                     .toList();
         }
 
@@ -95,28 +125,34 @@ public class LearningPathwayService {
                     course.getDescription()));
         }
 
-        // AI cần đầu vào chuẩn dựa trên lịch sử làm bài của learner.
-        // Giữ examAttemptId làm mốc (để đúng yêu cầu API), nhưng vẫn tổng hợp thêm N attempts gần nhất.
+        // Rut ra 10 bai thi gan nhat de PHAN TICH KEP: loi vua mac (latest) + loi kinh
+        // nien (historical)
         List<ExamAttempt> recentAttempts = examAttemptRepository.findTop10ByStudent_IdOrderBySubmittedAtDesc(studentId);
-        ExamResultAnalysisDTO examAnalysis = examResultAnalyzerService.analyzeLearnerAttempts(studentId, recentAttempts);
+        ExamResultAnalysisDTO examAnalysis = examResultAnalyzerService.analyzeLearnerAttempts(studentId,
+                recentAttempts);
         if (examAnalysis == null) {
-            // Fallback để tránh phá flow (đặc biệt trong unit tests khi mock chưa set returns).
+            // Fallback để tránh phá flow (đặc biệt trong unit tests khi mock chưa set
+            // returns).
             examAnalysis = examResultAnalyzerService.analyzeLatestExamAttempt(examAttempt);
         }
 
+        // Phan tich kep: boc tach "loi kinh nien" (weakCategories) va "loi moi mac"
+        // (latestWeakCategories)
         List<String> weakCategories = extractWeakCategories(examAnalysis.getKnowledgeGapsJson());
         List<String> latestWeakCategories = extractLatestWeakCategories(examAnalysis.getKnowledgeGapsJson());
 
         String categoryHint = "";
         if (!latestWeakCategories.isEmpty()) {
-            categoryHint += "\nHINT (LATEST EXAM): The learner JUST failed these categories in their most recent exam: " + latestWeakCategories + ". These should be addressed FIRST in the pathway.";
+            categoryHint += "\nHINT (LATEST EXAM): The learner JUST failed these categories in their most recent exam: "
+                    + latestWeakCategories + ". These should be addressed FIRST in the pathway.";
         }
         if (!weakCategories.isEmpty()) {
-            categoryHint += "\nHINT (HISTORICAL): The learner has a chronic weakness in these categories across past exams: " + weakCategories + ". These should be reinforced AFTER addressing the latest failures.";
+            categoryHint += "\nHINT (HISTORICAL): The learner has a chronic weakness in these categories across past exams: "
+                    + weakCategories + ". These should be reinforced AFTER addressing the latest failures.";
         }
 
         String goalText = (requestDTO.getGoalName() != null && !requestDTO.getGoalName().isBlank())
-                ? "MỤC TIÊU CỦA NGƯỜI HỌC: " + requestDTO.getGoalName() + "\n"
+? "MỤC TIÊU CỦA NGƯỜI HỌC: " + requestDTO.getGoalName() + "\n"
                 : "";
 
         String systemPrompt = """
@@ -128,11 +164,11 @@ public class LearningPathwayService {
                 %s
                 Core rules:
                 1. Only choose course_id values from [AVAILABLE_COURSES]. Never invent a course.
-                2. Prioritize foundations first, then harder reading or advanced skills.
+                2. COURSE DIFFICULTY MUST MATCH THE LEARNER'S CURRENT SCORE (latest_score or score_avg). DO NOT RECOMMEND "Advanced" or "Hard" courses in early steps if the learner's score is below 7.0, even if their goal is high. Prioritize foundations first.
                 3. ƯU TIÊN chọn các khóa học khắc phục trực tiếp các "weak_skills" trong phần phân tích và hướng tới MỤC TIÊU CỦA NGƯỜI HỌC. Đưa ra "reason_why" giải thích rõ tại sao khóa học này lại giúp cải thiện điểm yếu hoặc giúp đạt mục tiêu đó. "reason_why" phải giải thích cụ thể "Khóa này giải quyết lỗi vừa mắc" hay "Khóa này củng cố điểm yếu kinh niên".
                 4. "mentor_summary" PHẢI LÀ LỜI CHÀO VÀ TÓM TẮT THÔNG MINH, MẶC ĐỊNH SỬ DỤNG TIẾNG VIỆT (có thể dùng tiếng Anh nếu người dùng hỏi bằng tiếng Anh). Bạn PHẢI so sánh điểm số bài thi gần nhất (latest_score) với điểm trung bình lịch sử (lấy từ "score_avg" trong knowledge_gaps_json). Ví dụ: "Dựa trên lịch sử làm bài, điểm trung bình của bạn đang là [score_avg]/10. Tuy nhiên, trong bài thi vừa rồi (được [latest_score]/10 điểm), bạn đang gặp khó khăn ở phần [X]. Đồng thời, [Y] vẫn là điểm yếu kinh niên cần khắc phục...". TUYỆT ĐỐI KHÔNG trộn lẫn ngôn ngữ (nửa Anh nửa Việt) trong một câu.
                 5. Return valid JSON only, without markdown fences.
-                6. PATHWAY PRIORITY ORDER: 
+                6. PATHWAY PRIORITY ORDER:
                    - First courses should address the learner's LATEST exam weaknesses (most recent failures). Include EXACT tag "#New Vulnerability".
                    - Subsequent courses should reinforce HISTORICAL chronic weaknesses (patterns across exams). Include EXACT tag "#Chronic Weakness".
                    - Add topical tags like "#Grammar" as well. Max 2 tags total.
@@ -148,21 +184,20 @@ public class LearningPathwayService {
                 JSON format:
                 {
                   "roadmap_id": "AUTO_GEN",
-                  "mentor_summary": "Dựa trên lịch sử làm bài, điểm trung bình của bạn đang là 7.6/10. Tuy nhiên, trong bài thi vừa rồi (được 5.6/10 điểm), bạn đang gặp khó khăn ở phần Reading Comprehension. Đồng thời, Grammar vẫn là điểm yếu kinh niên...",
+                        "mentor_summary": "Dựa trên lịch sử làm bài, điểm trung bình của bạn đang là 7.6/10. Tuy nhiên, trong bài thi vừa rồi (được 5.6/10 điểm), bạn đang gặp khó khăn ở phần Reading Comprehension. Đồng thời, Grammar vẫn là điểm yếu kinh niên...",
                   "nodes": [
-                    { "step": 1, "course_id": 1, "reason_why": "Khóa học này giải quyết lỗi vừa mắc ở phần Đọc hiểu...", "status": "IN_PROGRESS", "tags": ["#New Vulnerability", "#Reading"] },
-                    { "step": 2, "course_id": 2, "reason_why": "Khóa này củng cố điểm yếu kinh niên về Ngữ pháp...", "status": "LOCKED", "tags": ["#Chronic Weakness", "#Grammar"] }
+                        { "step": 1, "course_id": 1, "reason_why": "Khóa học này giải quyết lỗi vừa mắc ở phần Đọc hiểu...", "status": "IN_PROGRESS", "tags": ["#New Vulnerability", "#Reading"] },
+                        { "step": 2, "course_id": 2, "reason_why": "Khóa này củng cố điểm yếu kinh niên về Ngữ pháp...", "status": "LOCKED", "tags": ["#Chronic Weakness", "#Grammar"] }
                   ]
                 }
-                """.formatted(
-                goalText,
-                courseListBuilder,
-                examAnalysis.getExamAttemptId(),
-                examAnalysis.getScore(),
-                examAnalysis.getKnowledgeGapsJson() == null ? "" : examAnalysis.getKnowledgeGapsJson(),
-                categoryHint
-        );
-
+                """
+                .formatted(
+                        goalText,
+                        courseListBuilder,
+                        examAnalysis.getExamAttemptId(),
+                        examAnalysis.getScore(),
+                        examAnalysis.getKnowledgeGapsJson() == null ? "" : examAnalysis.getKnowledgeGapsJson(),
+                        categoryHint);
 
         String userContent = "Latest exam attempt: \n" + examAttempt.getAnswersJson();
         List<GeminiGenerateRequest.Content> chatHistory = List.of(
@@ -171,18 +206,50 @@ public class LearningPathwayService {
                         .parts(List.of(GeminiGenerateRequest.Part.builder().text(userContent).build()))
                         .build());
 
+        // Goi Gemini sinh pathway dang JSON; neu AI loi thi dung fallback deterministic
         LearningPathwayResponseDTO responseDto;
         try {
             String aiResponseText = geminiClientService.generateChatResponse(systemPrompt, chatHistory);
-            aiResponseText = aiResponseText.replaceAll("(?s)^```json\\s*", "")
-                    .replaceAll("(?s)```\\s*$", "")
-                    .trim();
-            responseDto = objectMapper.readValue(aiResponseText, LearningPathwayResponseDTO.class);
+            if (aiResponseText != null) {
+                aiResponseText = aiResponseText.replaceAll("(?s)^```json\\s*", "")
+                        .replaceAll("(?s)```\\s*$", "")
+                        .trim();
+
+                // Trích xuất JSON object thuần từ phản hồi AI
+                int jsonStart = aiResponseText.indexOf('{');
+                int jsonEnd = aiResponseText.lastIndexOf('}');
+                if (jsonStart >= 0 && jsonEnd >= 0 && jsonEnd > jsonStart) {
+                    aiResponseText = aiResponseText.substring(jsonStart, jsonEnd + 1);
+                }
+            }
+
+            LearningPathwayResponseDTO parsed = null;
+            try {
+                if (aiResponseText != null && !aiResponseText.isBlank()) {
+                    parsed = LENIENT_MAPPER.readValue(aiResponseText, LearningPathwayResponseDTO.class);
+                }
+            } catch (Exception ignored) {}
+
+            if (parsed == null || parsed.getNodes() == null || parsed.getNodes().isEmpty()) {
+                if (objectMapper != null) {
+                    parsed = objectMapper.readValue(aiResponseText, LearningPathwayResponseDTO.class);
+                }
+            }
+
+            if (parsed == null) {
+                throw new IllegalStateException("Parsed pathway response is null");
+            }
+            responseDto = parsed;
         } catch (Exception e) {
+            // Fallback: khong goi AI nua - uu tien course thuoc category yeu, gioi han 4
+            // node
             log.warn("Falling back to deterministic learning pathway because AI generation failed: {}", e.getMessage());
-            responseDto = buildFallbackPathwayDto(examAttempt, availableCourses, usingExistingCoursesFallback, weakCategories);
+            responseDto = buildFallbackPathwayDto(examAttempt, availableCourses, usingExistingCoursesFallback,
+                    weakCategories);
         }
 
+        // Pathway cu (ACTIVE) chuyen sang ARCHIVED de moi user chi co 1 pathway hieu
+        // luc
         archiveActivePathway(studentId);
 
         LearningPathway newPathway = LearningPathway.builder()
@@ -190,7 +257,7 @@ public class LearningPathwayService {
                 .examAttempt(examAttempt)
                 .mentorSummary(responseDto.getMentorSummary() != null
                         ? responseDto.getMentorSummary()
-                        : "Tôi đã xây dựng một lộ trình từ kết quả bài kiểm tra của bạn bằng cách sử dụng các khóa học hiện có trong HanGo.")
+                                        : "Tôi đã xây dựng một lộ trình từ kết quả bài kiểm tra của bạn bằng cách sử dụng các khóa học hiện có trong HanGo.")
                 .status("ACTIVE")
                 .goalName(requestDTO.getGoalName())
                 .targetDate(requestDTO.getTargetDate())
@@ -199,6 +266,8 @@ public class LearningPathwayService {
                 .build();
 
         if (responseDto.getNodes() != null) {
+            // Chi chap nhan course_id ton tai trong availableCourses - courseId AI bia ra
+            // bi bo qua
             for (PathwayNodeDTO nodeDto : responseDto.getNodes()) {
                 Course course = availableCourses.stream()
                         .filter(candidate -> candidate.getId().equals(nodeDto.getCourseId()))
@@ -213,9 +282,10 @@ public class LearningPathwayService {
                             .reasonWhy(nodeDto.getReasonWhy() != null
                                     ? nodeDto.getReasonWhy()
                                     : defaultReasonForCourse(course, examAttempt))
-                            .tags(nodeDto.getTags() != null && !nodeDto.getTags().isEmpty() 
-                                    ? String.join(",", nodeDto.getTags()) 
-                                    : (course.getCategory() != null ? "#" + course.getCategory().getParamValue() : null))
+                            .tags(nodeDto.getTags() != null && !nodeDto.getTags().isEmpty()
+                                    ? String.join(",", nodeDto.getTags())
+                                    : (course.getCategory() != null ? "#" + course.getCategory().getParamValue()
+                                            : null))
                             .progressPercent(0)
                             .build();
                     newPathway.addNode(node);
@@ -227,8 +297,12 @@ public class LearningPathwayService {
             addFallbackNodes(newPathway, examAttempt, availableCourses);
         }
 
-        if (requestDTO.getTargetDate() != null && requestDTO.getHoursPerWeek() != null && requestDTO.getHoursPerWeek() > 0) {
-            applyTimeboxing(newPathway, requestDTO.getTargetDate(), requestDTO.getHoursPerWeek(), requestDTO.getPreferredStudyDays());
+        // Time-boxing: neu user nhap targetDate + hoursPerWeek thi tinh ngay
+        // start/deadline tung node
+        if (requestDTO.getTargetDate() != null && requestDTO.getHoursPerWeek() != null
+                && requestDTO.getHoursPerWeek() > 0) {
+            applyTimeboxing(newPathway, requestDTO.getTargetDate(), requestDTO.getHoursPerWeek(),
+                    requestDTO.getPreferredStudyDays());
         }
 
         LearningPathway savedPathway = learningPathwayRepository.save(newPathway);
@@ -253,8 +327,8 @@ public class LearningPathwayService {
 
         final int finalScore = effectiveScore;
         pathway.setMentorSummary(finalScore < 60
-                ? "Hệ thống đã tự động thay đổi lộ trình học tập do điểm bài kiểm tra gần nhất của bạn hơi thấp. Tôi đang tập trung điều chỉnh lại lộ trình vào các kỹ năng nền tảng mà bạn cần nắm vững trước tiên."
-                : "Hiệu suất bài kiểm tra gần đây của bạn là chấp nhận được, vì vậy lộ trình hiện tại vẫn là lựa chọn tốt nhất.");
+                        ? "Hệ thống đã tự động thay đổi lộ trình học tập do điểm bài kiểm tra gần nhất của bạn hơi thấp. Tôi đang tập trung điều chỉnh lại lộ trình vào các kỹ năng nền tảng mà bạn cần nắm vững trước tiên."
+                        : "Hiệu suất bài kiểm tra gần đây của bạn là chấp nhận được, vì vậy lộ trình hiện tại vẫn là lựa chọn tốt nhất.");
 
         if (pathway.getNodes() != null) {
             boolean firstNodeSeen = false;
@@ -262,7 +336,9 @@ public class LearningPathwayService {
                 if (!firstNodeSeen && node.getStepOrder() != null && node.getStepOrder() == 1) {
                     node.setStatus("IN_PROGRESS");
                     // Reset progress only if less than current real progress
-                    int realProgress = calculateCourseProgressPercent(studentId, node.getCourse().getId());
+                    Course effectiveCourse = resolveEffectiveCourse(studentId, node.getCourse());
+                    Long courseId = effectiveCourse != null ? effectiveCourse.getId() : (node.getCourse() != null ? node.getCourse().getId() : null);
+                    int realProgress = courseId != null ? calculateCourseProgressPercent(studentId, courseId) : 0;
                     node.setProgressPercent(Math.max(node.getProgressPercent(), realProgress));
                     firstNodeSeen = true;
                 } else if (!"COMPLETED".equalsIgnoreCase(node.getStatus())) {
@@ -297,7 +373,8 @@ public class LearningPathwayService {
     }
 
     @Transactional
-    public LearningPathwayResponseDTO processMentorAction(Long pathwayId, Long studentId, MentorActionRequestDTO request) {
+    public LearningPathwayResponseDTO processMentorAction(Long pathwayId, Long studentId,
+            MentorActionRequestDTO request) {
         LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
                 .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
 
@@ -328,9 +405,10 @@ public class LearningPathwayService {
                                     }
                                 });
                     }
-                    pathway.setMentorSummary("✅ Đã bỏ qua khóa học '" + currentNode.getCourse().getTitle() + "' và mở khóa bước tiếp theo cho bạn.");
+                pathway.setMentorSummary("✅ Đã bỏ qua khóa học '" + currentNode.getCourse().getTitle()
+                            + "' và mở khóa bước tiếp theo cho bạn.");
                 } else {
-                    pathway.setMentorSummary("Không tìm thấy khóa học nào đang học để bỏ qua.");
+                pathway.setMentorSummary("Không tìm thấy khóa học nào đang học để bỏ qua.");
                 }
             }
             case "ADJUST_SCHEDULE" -> {
@@ -342,15 +420,17 @@ public class LearningPathwayService {
                 if (newHours != null && newHours > 0) {
                     pathway.setHoursPerWeek(newHours);
                 }
-                if (pathway.getTargetDate() != null && pathway.getHoursPerWeek() != null && pathway.getHoursPerWeek() > 0) {
+                if (pathway.getTargetDate() != null && pathway.getHoursPerWeek() != null
+                        && pathway.getHoursPerWeek() > 0) {
                     applyTimeboxing(pathway, pathway.getTargetDate(), pathway.getHoursPerWeek(), null);
                     pathway.setScheduleStatus("ON_TRACK");
                     pathway.setMentorSummary("📅 Lịch trình đã được tính toán lại" +
-                            (newHours != null ? " với " + newHours + " giờ/tuần." : ".") +
+                        (newHours != null ? " với " + newHours + " giờ/tuần." : ".") +
                             " Hãy cố gắng theo đúng tiến độ nhé!");
                 } else {
                     pathway.setScheduleStatus("AT_RISK");
-                    pathway.setMentorSummary("⚠️ Lịch trình chưa thể tính lại vì chưa có ngày mục tiêu hoặc số giờ/tuần. Hãy cập nhật mục tiêu của bạn.");
+                    pathway.setMentorSummary(
+                                "⚠️ Lịch trình chưa thể tính lại vì chưa có ngày mục tiêu hoặc số giờ/tuần. Hãy cập nhật mục tiêu của bạn.");
                 }
             }
             case "TAKE_QUIZ" -> {
@@ -366,9 +446,11 @@ public class LearningPathwayService {
                     overview.append("🎯 Mục tiêu: ").append(pathway.getGoalName()).append("\n");
                 }
                 int total = pathway.getNodes() != null ? pathway.getNodes().size() : 0;
-                long completed = pathway.getNodes() != null ?
-                        pathway.getNodes().stream().filter(n -> "COMPLETED".equalsIgnoreCase(n.getStatus())).count() : 0;
-                overview.append("📊 Tiến độ: ").append(completed).append("/").append(total).append(" bước hoàn thành\n\n");
+                long completed = pathway.getNodes() != null
+                        ? pathway.getNodes().stream().filter(n -> "COMPLETED".equalsIgnoreCase(n.getStatus())).count()
+                        : 0;
+                overview.append("📊 Tiến độ: ").append(completed).append("/").append(total)
+                        .append(" bước hoàn thành\n\n");
                 overview.append("Các kỹ năng sẽ được cải thiện:\n");
                 if (pathway.getNodes() != null) {
                     for (PathwayNode node : pathway.getNodes()) {
@@ -377,8 +459,9 @@ public class LearningPathwayService {
                             case "IN_PROGRESS" -> "🔄";
                             default -> "🔒";
                         };
-                        String skill = node.getCourse().getCategory() != null ?
-                                node.getCourse().getCategory().getParamValue() : "General";
+                        String skill = node.getCourse().getCategory() != null
+                                ? node.getCourse().getCategory().getParamValue()
+                                : "General";
                         overview.append(status).append(" Bước ").append(node.getStepOrder())
                                 .append(": ").append(node.getCourse().getTitle())
                                 .append(" (").append(skill).append(")\n");
@@ -387,7 +470,8 @@ public class LearningPathwayService {
                 pathway.setMentorSummary(overview.toString());
             }
             default -> {
-                pathway.setMentorSummary("Tôi đã nhận được yêu cầu của bạn (" + actionType + "), nhưng chưa biết cách xử lý nó lúc này.");
+                pathway.setMentorSummary("Tôi đã nhận được yêu cầu của bạn (" + actionType
+                        + "), nhưng chưa biết cách xử lý nó lúc này.");
             }
         }
 
@@ -396,7 +480,8 @@ public class LearningPathwayService {
     }
 
     private PathwayNode findCurrentInProgressNode(LearningPathway pathway) {
-        if (pathway.getNodes() == null) return null;
+        if (pathway.getNodes() == null)
+            return null;
         return pathway.getNodes().stream()
                 .filter(n -> "IN_PROGRESS".equalsIgnoreCase(n.getStatus()))
                 .findFirst()
@@ -409,39 +494,43 @@ public class LearningPathwayService {
         }
         try {
             String courseName = currentNode.getCourse().getTitle();
-            String category = currentNode.getCourse().getCategory() != null ?
-                    currentNode.getCourse().getCategory().getParamValue() : "General English";
+            String category = currentNode.getCourse().getCategory() != null
+                    ? currentNode.getCourse().getCategory().getParamValue()
+                    : "General English";
 
             String prompt = """
-                    Tạo 3 câu hỏi trắc nghiệm (mỗi câu 4 lựa chọn A/B/C/D) về chủ đề "%s" (%s) cho học sinh luyện thi THPT Quốc gia Tiếng Anh.
-                    Format mỗi câu:
-                    **Câu X:** [câu hỏi]
-                    A. [lựa chọn]
-                    B. [lựa chọn]
-                    C. [lựa chọn]
-                    D. [lựa chọn]
-                    ✅ Đáp án: [đáp án đúng]
+                Tạo 3 câu hỏi trắc nghiệm (mỗi câu 4 lựa chọn A/B/C/D) về chủ đề "%s" (%s) cho học sinh luyện thi THPT Quốc gia Tiếng Anh.
+                Format mỗi câu:
+                **Câu X:** [câu hỏi]
+                A. [lựa chọn]
+                B. [lựa chọn]
+                C. [lựa chọn]
+                D. [lựa chọn]
+                ✅ Đáp án: [đáp án đúng]
 
-                    Chỉ trả về đúng 3 câu hỏi, không thêm gì khác.
-                    """.formatted(courseName, category);
+                Chỉ trả về đúng 3 câu hỏi, không thêm gì khác.
+                    """
+                    .formatted(courseName, category);
 
-            java.util.List<com.hango.hango_backend.dto.GeminiGenerateRequest.Content> history = java.util.List.of(
+            List<com.hango.hango_backend.dto.GeminiGenerateRequest.Content> history = List.of(
                     com.hango.hango_backend.dto.GeminiGenerateRequest.Content.builder()
                             .role("user")
-                            .parts(java.util.List.of(com.hango.hango_backend.dto.GeminiGenerateRequest.Part.builder().text(prompt).build()))
+                            .parts(List.of(com.hango.hango_backend.dto.GeminiGenerateRequest.Part.builder()
+                                    .text(prompt).build()))
                             .build());
 
             String quizText = geminiClientService.generateChatResponse(
-                    "Bạn là giáo viên Tiếng Anh THPT. Tạo câu hỏi trắc nghiệm chất lượng.", history);
-            return "📝 **Mini-Quiz: " + courseName + "**\n\n" + quizText;
+                "Bạn là giáo viên Tiếng Anh THPT. Tạo câu hỏi trắc nghiệm chất lượng.", history);
+        return "📝 **Mini-Quiz: " + courseName + "**\n\n" + quizText;
         } catch (Exception e) {
             log.warn("Failed to generate mini-quiz: {}", e.getMessage());
-            return "📝 Tôi đang gặp sự cố khi tạo mini-quiz. Vui lòng thử lại sau.";
+        return "📝 Tôi đang gặp sự cố khi tạo mini-quiz. Vui lòng thử lại sau.";
         }
     }
 
     @Transactional
-    public LearningPathwayResponseDTO applySchedule(Long pathwayId, Long studentId, PathwayScheduleRequestDTO requestDTO) {
+    public LearningPathwayResponseDTO applySchedule(Long pathwayId, Long studentId,
+            PathwayScheduleRequestDTO requestDTO) {
         LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
                 .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
 
@@ -454,7 +543,8 @@ public class LearningPathwayService {
         pathway.setHoursPerWeek(requestDTO.getHoursPerWeek());
         pathway.setScheduleStatus("ON_TRACK");
 
-        applyTimeboxing(pathway, requestDTO.getTargetDate(), requestDTO.getHoursPerWeek(), requestDTO.getPreferredStudyDays());
+        applyTimeboxing(pathway, requestDTO.getTargetDate(), requestDTO.getHoursPerWeek(),
+                requestDTO.getPreferredStudyDays());
 
         LearningPathway savedPathway = learningPathwayRepository.save(pathway);
         return toResponseDto(savedPathway, studentId);
@@ -472,16 +562,27 @@ public class LearningPathwayService {
         return pathway.getScheduleStatus() != null ? pathway.getScheduleStatus() : "NONE";
     }
 
-    private void applyTimeboxing(LearningPathway pathway, LocalDate targetDate, Integer hoursPerWeek, List<Integer> preferredStudyDays) {
-        if (pathway.getNodes() == null || pathway.getNodes().isEmpty()) return;
+    private void applyTimeboxing(LearningPathway pathway, LocalDate targetDate, Integer hoursPerWeek,
+            List<Integer> preferredStudyDays) {
+        if (pathway.getNodes() == null || pathway.getNodes().isEmpty())
+            return;
 
-        List<Integer> estimatedHoursPerNode = new java.util.ArrayList<>();
+        // Uoc luong so gio moi node = so lesson * 2h (node COMPLETED khong ton nang
+        // luong)
+        List<Integer> estimatedHoursPerNode = new ArrayList<>();
         for (PathwayNode node : pathway.getNodes()) {
             if ("COMPLETED".equalsIgnoreCase(node.getStatus())) {
                 estimatedHoursPerNode.add(0); // Completed nodes consume no forward capacity
             } else {
-                long totalLessons = lessonRepository.countByCourseId(node.getCourse().getId());
-                estimatedHoursPerNode.add(totalLessons == 0 ? 3 : (int) (totalLessons * 2));
+                Course effectiveCourse = resolveEffectiveCourse(pathway.getStudent() != null ? pathway.getStudent().getId() : null, node.getCourse());
+                Course course = effectiveCourse != null ? effectiveCourse : node.getCourse();
+                Integer estDuration = course != null ? course.getEstimatedDuration() : null;
+                if (estDuration != null && estDuration > 0) {
+                    estimatedHoursPerNode.add(estDuration);
+                } else {
+                    long totalLessons = course != null && course.getId() != null ? lessonRepository.countByCourseId(course.getId()) : 0;
+                    estimatedHoursPerNode.add(totalLessons == 0 ? 3 : (int) (totalLessons * 2));
+                }
             }
         }
 
@@ -490,21 +591,20 @@ public class LearningPathwayService {
                 hoursPerWeek,
                 preferredStudyDays,
                 estimatedHoursPerNode,
-                pathway.getNodes().size()
-        );
+                pathway.getNodes().size());
 
         for (int i = 0; i < pathway.getNodes().size(); i++) {
             PathwayNode node = pathway.getNodes().get(i);
             if ("COMPLETED".equalsIgnoreCase(node.getStatus())) {
                 continue; // Do not alter the historical schedule of completed nodes
             }
-            
+
             PathwayTimeboxingScheduler.NodeSchedule nodeSchedule = schedule.get(i);
-            
+
             node.setStartDate(nodeSchedule.getStartDate() != null ? nodeSchedule.getStartDate().atStartOfDay() : null);
             node.setDeadline(nodeSchedule.getDeadline() != null ? nodeSchedule.getDeadline().atTime(23, 59) : null);
             node.setEstimatedHours(nodeSchedule.getEstimatedHours());
-            
+
             boolean isBehind = false;
             if (nodeSchedule.getDeadline() != null) {
                 // If the scheduled deadline is after the user's target date, we are behind
@@ -518,42 +618,80 @@ public class LearningPathwayService {
             }
             node.setScheduleStatus(isBehind ? "BEHIND" : "ON_TRACK");
         }
+
+        // D1: aggregate trang thai pathway tu cac node - co node chua hoan thanh bi
+        // BEHIND thi pathway BEHIND
+        refreshScheduleStatus(pathway);
+    }
+
+    /** Tinh lai pathway.scheduleStatus tu trang thai cua tung node con lai. */
+    private void refreshScheduleStatus(LearningPathway pathway) {
+        if (pathway.getNodes() == null || pathway.getNodes().isEmpty())
+            return;
+        boolean anyBehind = pathway.getNodes().stream()
+                .anyMatch(n -> !"COMPLETED".equalsIgnoreCase(n.getStatus())
+                        && "BEHIND".equalsIgnoreCase(n.getScheduleStatus()));
+        pathway.setScheduleStatus(anyBehind ? "BEHIND" : "ON_TRACK");
     }
 
     private LearningPathwayResponseDTO toResponseDto(LearningPathway pathway, Long studentId) {
-        List<PathwayNodeDTO> nodeDTOs = pathway.getNodes().stream().map(node -> {
-            int realProgress = calculateCourseProgressPercent(studentId, node.getCourse().getId());
-            long totalLessons = lessonRepository.countByCourseId(node.getCourse().getId());
-            long completedLessons = countCompletedLessons(studentId, node.getCourse().getId());
-            String skillType = node.getCourse().getCategory() != null
-                    ? node.getCourse().getCategory().getParamValue()
-                    : null;
+        List<PathwayNode> sortedNodes = pathway.getNodes() != null
+                ? pathway.getNodes().stream().sorted(java.util.Comparator.comparingInt(PathwayNode::getStepOrder)).toList()
+                : Collections.emptyList();
+
+        List<PathwayNodeDTO> nodeDTOs = new ArrayList<>();
+        boolean allPreviousCompleted = true;
+        for (PathwayNode node : sortedNodes) {
+            Course effectiveCourse = resolveEffectiveCourse(studentId, node.getCourse());
+            Long effectiveCourseId = effectiveCourse != null ? effectiveCourse.getId() : (node.getCourse() != null ? node.getCourse().getId() : null);
+            int realProgress = effectiveCourseId != null ? calculateCourseProgressPercent(studentId, effectiveCourseId) : 0;
+            long totalLessons = effectiveCourseId != null ? lessonRepository.countByCourseId(effectiveCourseId) : 0;
+            long completedLessons = effectiveCourseId != null ? countCompletedLessons(studentId, effectiveCourseId) : 0;
+            String skillType = (effectiveCourse != null && effectiveCourse.getCategory() != null)
+                    ? effectiveCourse.getCategory().getParamValue()
+                    : (node.getCourse() != null && node.getCourse().getCategory() != null ? node.getCourse().getCategory().getParamValue() : null);
 
             // Auto-sync node status based on actual progress
             String resolvedStatus = node.getStatus();
+            // Node duoc skip/detour bang tay (co nodeType) giu nguyen COMPLETED hop le
+            boolean manuallyCompleted = node.getNodeType() != null && !node.getNodeType().isBlank();
             if (totalLessons > 0 && realProgress >= 100) {
                 resolvedStatus = "COMPLETED";
-            } else if (realProgress > 0 && "LOCKED".equalsIgnoreCase(node.getStatus())) {
+            } else if ("COMPLETED".equalsIgnoreCase(resolvedStatus) && realProgress < 100 && !manuallyCompleted) {
+                // E5: AI co the tra COMPLETED ao - ha ve IN_PROGRESS neu tien do that < 100%
+                resolvedStatus = "IN_PROGRESS";
+            } else if ((realProgress > 0 || allPreviousCompleted) && "LOCKED".equalsIgnoreCase(node.getStatus())) {
                 resolvedStatus = "IN_PROGRESS";
             }
 
-            return PathwayNodeDTO.builder()
+            allPreviousCompleted = allPreviousCompleted && "COMPLETED".equalsIgnoreCase(resolvedStatus);
+
+            nodeDTOs.add(PathwayNodeDTO.builder()
                     .id(node.getId())
                     .step(node.getStepOrder())
-                    .courseId(node.getCourse().getId())
-                    .courseTitle(node.getCourse().getTitle())
+                    .courseId(effectiveCourseId)
+                    .courseTitle(effectiveCourse != null ? effectiveCourse.getTitle() : (node.getCourse() != null ? node.getCourse().getTitle() : "Course Title"))
+                    .difficulty(effectiveCourse != null && effectiveCourse.getDifficulty() != null
+                            ? effectiveCourse.getDifficulty().getParamValue()
+                            : (node.getCourse() != null && node.getCourse().getDifficulty() != null ? node.getCourse().getDifficulty().getParamValue() : "N/A"))
                     .status(resolvedStatus)
+                    .nodeType(node.getNodeType())
+                    .rerouteReason(node.getRerouteReason())
+                    .isOptional(node.getIsOptional())
+                    .skippedAt(node.getSkippedAt() != null ? node.getSkippedAt().toString() : null)
+                    .parentNodeId(node.getParentNodeId())
                     .reasonWhy(node.getReasonWhy())
                     .progressPercent(realProgress)
                     .skillType(skillType)
                     .totalLessons(Math.toIntExact(Math.min(totalLessons, Integer.MAX_VALUE)))
                     .completedLessons(Math.toIntExact(Math.min(completedLessons, Integer.MAX_VALUE)))
-                    .completedLessons(Math.toIntExact(Math.min(completedLessons, Integer.MAX_VALUE)))
                     .tags(node.getTags() != null && !node.getTags().isBlank()
-                            ? java.util.Arrays.asList(node.getTags().split(","))
-                            : (node.getCourse().getCategory() != null
-                                    ? List.of("#" + node.getCourse().getCategory().getParamValue())
-                                    : Collections.emptyList()))
+                            ? Arrays.asList(node.getTags().split(","))
+                            : ((effectiveCourse != null && effectiveCourse.getCategory() != null)
+                                    ? List.of("#" + effectiveCourse.getCategory().getParamValue())
+                                    : (node.getCourse() != null && node.getCourse().getCategory() != null
+                                            ? List.of("#" + node.getCourse().getCategory().getParamValue())
+                                            : Collections.emptyList())))
                     .startDate(node.getStartDate() != null ? node.getStartDate().toString() : null)
                     .deadline(node.getDeadline() != null ? node.getDeadline().toString() : null)
                     .estimatedHours(node.getEstimatedHours())
@@ -562,8 +700,8 @@ public class LearningPathwayService {
                     .isMastered(node.getIsMastered())
                     .nextReviewDate(node.getNextReviewDate() != null ? node.getNextReviewDate().toString() : null)
                     .reviewIntervalDays(node.getReviewIntervalDays())
-                    .build();
-        }).toList();
+                    .build());
+        }
 
         int totalSteps = nodeDTOs.size();
         int completedSteps = (int) nodeDTOs.stream()
@@ -574,44 +712,83 @@ public class LearningPathwayService {
         List<ExamAttempt> recentAttempts = examAttemptRepository.findTop10ByStudent_IdOrderBySubmittedAtDesc(studentId);
         ExamResultAnalysisDTO analysisDTO = examResultAnalyzerService.analyzeLearnerAttempts(studentId, recentAttempts);
         List<String> weakSkills = Collections.emptyList();
+        List<String> latestWeakSkills = Collections.emptyList();
         if (analysisDTO != null && analysisDTO.getKnowledgeGapsJson() != null) {
             try {
                 @SuppressWarnings("unchecked")
-                java.util.Map<String, Object> gaps = objectMapper.readValue(analysisDTO.getKnowledgeGapsJson(), java.util.Map.class);
+                Map<String, Object> gaps = objectMapper.readValue(analysisDTO.getKnowledgeGapsJson(),
+                        Map.class);
                 Object ws = gaps.get("weak_skills");
                 if (ws instanceof List<?> wsList) {
                     weakSkills = wsList.stream().map(Object::toString).toList();
+                }
+                Object lws = gaps.get("latest_weak_skills");
+                if (lws instanceof List<?> lwsList) {
+                    latestWeakSkills = lwsList.stream().map(Object::toString).toList();
                 }
             } catch (Exception e) {
                 log.debug("Failed to parse weak_skills from knowledge gap: {}", e.getMessage());
             }
         }
 
-        List<String> suggestedActions = new java.util.ArrayList<>();
+        List<String> suggestedActions = new ArrayList<>();
 
         // Context-aware suggested actions based on actual learner progress
         PathwayNode currentNode = null;
         if (pathway.getNodes() != null) {
             currentNode = pathway.getNodes().stream()
+                    .sorted(Comparator.comparingInt(PathwayNode::getStepOrder))
                     .filter(n -> "IN_PROGRESS".equalsIgnoreCase(n.getStatus()))
                     .findFirst()
                     .orElse(null);
+
+            if (currentNode == null) {
+                currentNode = pathway.getNodes().stream()
+                        .sorted(Comparator.comparingInt(PathwayNode::getStepOrder))
+                        .filter(n -> !"COMPLETED".equalsIgnoreCase(n.getStatus()))
+                        .findFirst()
+                        .orElse(null);
+            }
+        }
+
+        String effectiveMentorSummary = pathway.getMentorSummary();
+        if (effectiveMentorSummary == null || effectiveMentorSummary.isBlank()
+                || effectiveMentorSummary.contains("Đường dẫn này yêu cầu một khóa học Premium")
+                || effectiveMentorSummary.startsWith("⚠️ **Lưu ý:** Lộ trình này yêu cầu một khóa học Premium")) {
+            effectiveMentorSummary = "Chào bạn! Tôi là AI Mentor đồng hành cùng bạn. Dựa trên kết quả bài kiểm tra của bạn, tôi đã xây dựng lộ trình học tập này để giúp bạn củng cố các kỹ năng còn yếu và đạt được mục tiêu điểm số.";
         }
 
         if (currentNode != null) {
-            int progress = calculateCourseProgressPercent(studentId, currentNode.getCourse().getId());
-            suggestedActions.add("FAST_TRACK"); // Unconditionally allow fast-track for current node
-            
-            if (progress > 0 && progress < 50) {
-                suggestedActions.add("TAKE_QUIZ");
+            Course currentEffectiveCourse = resolveEffectiveCourse(studentId, currentNode.getCourse());
+            Long currentEffectiveCourseId = currentEffectiveCourse != null ? currentEffectiveCourse.getId() : (currentNode.getCourse() != null ? currentNode.getCourse().getId() : null);
+            int progress = currentEffectiveCourseId != null ? calculateCourseProgressPercent(studentId, currentEffectiveCourseId) : 0;
+            boolean isFree = (currentEffectiveCourse != null && currentEffectiveCourse.getPrice() != null && currentEffectiveCourse.getPrice().compareTo(java.math.BigDecimal.ZERO) == 0)
+                    || (currentNode.getCourse() != null && (currentNode.getCourse().getPrice() == null || currentNode.getCourse().getPrice().compareTo(java.math.BigDecimal.ZERO) == 0));
+            boolean isEnrolled = isFree || (currentEffectiveCourseId != null && (enrollmentRepository.existsByUserIdAndCourseId(studentId, currentEffectiveCourseId)
+                    || (enrollmentRepository != null && !enrollmentRepository.findFamilyEnrollments(studentId, currentEffectiveCourseId).isEmpty())));
+
+            if (isEnrolled) {
+                suggestedActions.add("FAST_TRACK"); // Only allow fast-track if enrolled or free
+
+                if (progress > 0 && progress < 50) {
+                    suggestedActions.add("TAKE_QUIZ");
+                }
+            } else {
+                suggestedActions.add("ENROLL_OR_REGENERATE");
+                String premiumNotice = "⚠️ **Lưu ý:** Khóa học tiếp theo là khóa học Premium. Bạn có thể mua khóa học để tiếp tục, hoặc tôi có thể thiết kế lại một lộ trình thay thế hoàn toàn miễn phí cho bạn.";
+                if (!effectiveMentorSummary.contains("Premium")) {
+                    effectiveMentorSummary = effectiveMentorSummary + "\n\n" + premiumNotice;
+                }
             }
         } else if (completedSteps > 0 && completedSteps == totalSteps) {
             // Pathway is fully completed
             suggestedActions.add("TAKE_NEW_EXAM");
-            pathway.setMentorSummary("🎉 Chúc mừng bạn đã hoàn thành xuất sắc toàn bộ lộ trình hiện tại! Để tiếp tục nâng cao trình độ, hãy làm một bài kiểm tra đánh giá năng lực mới để tôi có thể thiết kế cho bạn một lộ trình nâng cấp hơn nhé!");
+            effectiveMentorSummary =
+                    "🎉 Chúc mừng bạn đã hoàn thành xuất sắc toàn bộ lộ trình hiện tại! Để tiếp tục nâng cao trình độ, hãy làm một bài kiểm tra đánh giá năng lực mới để tôi có thể thiết kế cho bạn một lộ trình nâng cấp hơn nhé!";
         }
 
-        if ("BEHIND".equalsIgnoreCase(pathway.getScheduleStatus()) || "AT_RISK".equalsIgnoreCase(pathway.getScheduleStatus())) {
+        if ("BEHIND".equalsIgnoreCase(pathway.getScheduleStatus())
+                || "AT_RISK".equalsIgnoreCase(pathway.getScheduleStatus())) {
             suggestedActions.add("ADJUST_SCHEDULE");
         }
 
@@ -623,25 +800,389 @@ public class LearningPathwayService {
             suggestedActions.add(0, "TAKE_QUIZ");
         }
 
+        // D1: derive scheduleStatus hien hanh tu node (khong mutate entity trong tx
+        // read-only)
+        String derivedScheduleStatus = pathway.getScheduleStatus();
+        if (pathway.getNodes() != null && !pathway.getNodes().isEmpty()) {
+            boolean anyBehind = pathway.getNodes().stream()
+                    .anyMatch(n -> !"COMPLETED".equalsIgnoreCase(n.getStatus())
+                            && "BEHIND".equalsIgnoreCase(n.getScheduleStatus()));
+            derivedScheduleStatus = anyBehind ? "BEHIND" : "ON_TRACK";
+        }
+
         return LearningPathwayResponseDTO.builder()
                 .pathwayId(pathway.getId())
                 .roadmapId("RM_USER_" + studentId + "_" + pathway.getId())
                 .examAttemptId(pathway.getExamAttempt() != null ? pathway.getExamAttempt().getId() : null)
-                .mentorSummary(pathway.getMentorSummary())
+                .mentorSummary(effectiveMentorSummary)
                 .nodes(nodeDTOs)
                 .totalSteps(totalSteps)
                 .completedSteps(completedSteps)
                 .weakSkills(weakSkills)
+                .latestWeakSkills(latestWeakSkills)
+                .analyzedAttempts(recentAttempts.size())
                 .goalName(pathway.getGoalName())
                 .targetDate(pathway.getTargetDate() != null ? pathway.getTargetDate().toString() : null)
                 .hoursPerWeek(pathway.getHoursPerWeek())
-                .scheduleStatus(pathway.getScheduleStatus())
+                .scheduleStatus(derivedScheduleStatus)
                 .suggestedActions(suggestedActions)
                 .build();
     }
 
+    // ===================== MASTERY QUIZ (spec 20 - B1/B2) =====================
+
+    /**
+     * Lay de Mastery Quiz cho 1 node: uu tien cau hoi thuoc lesson FINAL_QUIZ cua
+     * course, fallback ve moi lesson quiz khac cua course, cuoi cung lay tu
+     * Question
+     * Bank theo category. KHONG tra dap an ve FE.
+     */
+    // LearningPathwayService.getMasteryQuestions - thêm null-check
+    @Transactional(readOnly = true)
+    public List<MasteryQuestionDTO> getMasteryQuestions(Long pathwayId, Long nodeId, Long studentId) {
+        LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
+                .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
+        if (!pathway.getStudent().getId().equals(studentId)) {
+            throw new ApiException("Access denied", HttpStatus.FORBIDDEN);
+        }
+        PathwayNode node = pathway.getNodes().stream()
+                .filter(n -> n.getId().equals(nodeId))
+                .findFirst()
+                .orElseThrow(() -> new ApiException("Node not found in pathway", HttpStatus.NOT_FOUND));
+
+        Course effectiveCourse = resolveEffectiveCourse(studentId, node.getCourse());
+        Course course = effectiveCourse != null ? effectiveCourse : node.getCourse();
+        if (course == null) {
+            throw new ApiException("Node has no associated course", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        Long courseId = course.getId();
+
+        int realProgress = courseId != null ? calculateCourseProgressPercent(studentId, courseId) : 0;
+        long totalLessons = courseId != null ? lessonRepository.countByCourseId(courseId) : 0;
+        String resolvedStatus = node.getStatus();
+        boolean manuallyCompleted = node.getNodeType() != null && !node.getNodeType().isBlank();
+        
+        if (totalLessons > 0 && realProgress >= 100) {
+            resolvedStatus = "COMPLETED";
+        } else if ("COMPLETED".equalsIgnoreCase(resolvedStatus) && realProgress < 100 && !manuallyCompleted) {
+            resolvedStatus = "IN_PROGRESS";
+        } else if (realProgress > 0 && "LOCKED".equalsIgnoreCase(node.getStatus())) {
+            resolvedStatus = "IN_PROGRESS";
+        }
+
+        boolean isFree = (course.getPrice() == null || course.getPrice().compareTo(java.math.BigDecimal.ZERO) == 0);
+        boolean isEnrolled = isFree || (courseId != null && (enrollmentRepository.existsByUserIdAndCourseId(studentId, courseId)
+                || (enrollmentRepository != null && !enrollmentRepository.findFamilyEnrollments(studentId, courseId).isEmpty())));
+
+        if (!isEnrolled) {
+            throw new ApiException("Bạn cần mua khóa học này để thi Fast-track", HttpStatus.FORBIDDEN);
+        }
+
+        List<Long> quizLessonIds = resolveQuizLessonIds(courseId);
+
+        if (!quizLessonIds.isEmpty()) {
+            List<Long> targetLessonId = List.of(quizLessonIds.get(0));
+            List<MasteryQuestionDTO> questions = loadQuestionsFromLessonQuizzes(targetLessonId, 1000);
+            if (!questions.isEmpty()) {
+                return questions;
+            }
+        }
+
+        // Fallback: category có thể null
+        String category = null;
+        if (course.getCategory() != null) {
+            category = course.getCategory().getParamValue();
+        }
+        return loadQuestionsFromBank(category, 10);
+    }
+
+    /**
+     * Nop bai Mastery: cham server-side, luu attempt voi state='MASTERY' vao
+     * lesson_quiz_attempts (khong can bang moi), cap nhat mastery/spaced-repetition
+     * cua node va tra lai pathway da cap nhat.
+     */
     @Transactional
-    public LearningPathwayResponseDTO submitNodeMastery(Long pathwayId, Long nodeId, Long studentId, com.hango.hango_backend.dto.MasterySubmitRequestDTO request) {
+    public com.hango.hango_backend.dto.MasterySubmitResponseDTO submitMasteryAnswers(
+            Long pathwayId, Long nodeId, Long studentId,
+            com.hango.hango_backend.dto.MasterySubmitRequestDTO request) {
+        LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
+                .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
+        if (!pathway.getStudent().getId().equals(studentId)) {
+            throw new ApiException("Access denied", HttpStatus.FORBIDDEN);
+        }
+        PathwayNode node = pathway.getNodes().stream()
+                .filter(n -> n.getId().equals(nodeId))
+                .findFirst()
+                .orElseThrow(() -> new ApiException("Node not found in pathway", HttpStatus.NOT_FOUND));
+
+        Map<Long, List<Integer>> answers = new HashMap<>();
+        if (request.getAnswers() != null) {
+            request.getAnswers().forEach((k, v) -> {
+                List<Integer> selectedList = new ArrayList<>();
+                if (v instanceof Integer) {
+                    selectedList.add((Integer) v);
+                } else if (v instanceof List) {
+                    for (Object item : (List<?>) v) {
+                        if (item instanceof Integer) selectedList.add((Integer) item);
+                    }
+                }
+                answers.put(Long.parseLong(k), selectedList);
+            });
+        }
+        if (answers.isEmpty()) {
+            throw new ApiException("Answers are required", HttpStatus.BAD_REQUEST);
+        }
+
+        Course effectiveCourse = resolveEffectiveCourse(studentId, node.getCourse());
+        Course course = effectiveCourse != null ? effectiveCourse : node.getCourse();
+        Long courseId = course != null ? course.getId() : null;
+
+        if (course != null) {
+            boolean isFree = (course.getPrice() == null || course.getPrice().compareTo(java.math.BigDecimal.ZERO) == 0);
+            boolean isEnrolled = isFree || (courseId != null && (enrollmentRepository.existsByUserIdAndCourseId(studentId, courseId)
+                    || (enrollmentRepository != null && !enrollmentRepository.findFamilyEnrollments(studentId, courseId).isEmpty())));
+
+            if (!isEnrolled) {
+                throw new ApiException("Bạn cần mua khóa học này để thi Fast-track", HttpStatus.FORBIDDEN);
+            }
+        }
+
+        List<Long> quizLessonIds = courseId != null ? resolveQuizLessonIds(courseId) : Collections.emptyList();
+
+        // Cham tung cau: dung bang question_options de xac dinh dap an dung
+        int correct = 0;
+        List<Map<String, Object>> answerRecords = new ArrayList<>();
+        List<com.hango.hango_backend.dto.MasteryQuestionEvaluationDTO> evaluations = new ArrayList<>();
+        for (Map.Entry<Long, List<Integer>> entry : answers.entrySet()) {
+            Long questionId = entry.getKey();
+            List<Integer> selectedList = entry.getValue();
+            List<Boolean> flags = jdbcTemplate.queryForList(
+                    "SELECT qo.is_correct FROM question_options qo WHERE qo.question_id = ? ORDER BY id ASC",
+                    Boolean.class, questionId);
+            boolean ok = true;
+            List<Integer> correctOptionsList = new ArrayList<>();
+            for (int i = 0; i < flags.size(); i++) {
+                boolean isOptionCorrect = Boolean.TRUE.equals(flags.get(i));
+                boolean isOptionSelected = selectedList.contains(i);
+                if (isOptionCorrect) {
+                    correctOptionsList.add(i);
+                }
+                if (isOptionCorrect != isOptionSelected) {
+                    ok = false;
+                }
+            }
+            if (ok)
+                correct++;
+            Map<String, Object> rec = new LinkedHashMap<>();
+            rec.put("questionId", questionId);
+            rec.put("selectedOption", selectedList);
+            rec.put("isCorrect", ok);
+            answerRecords.add(rec);
+
+            String explanation = jdbcTemplate.queryForObject(
+                    "SELECT explanation FROM questions WHERE id = ?", String.class, questionId);
+            evaluations.add(com.hango.hango_backend.dto.MasteryQuestionEvaluationDTO.builder()
+                    .questionId(questionId)
+                    .selectedOptions(selectedList)
+                    .correctOptions(correctOptionsList)
+                    .isCorrect(ok)
+                    .explanation(explanation)
+                    .build());
+        }
+
+        int score = (int) Math.round(100.0 * correct / answers.size());
+
+        // Luu attempt vao lesson_quiz_attempts voi state='MASTERY' (thay cho bang moi)
+        Long primaryLessonId = !quizLessonIds.isEmpty() ? quizLessonIds.get(0) : null;
+        if (primaryLessonId != null) {
+            Lesson quizLesson = lessonRepository.findById(primaryLessonId).orElse(null);
+            if (quizLesson != null) {
+                User attemptStudent = userRepository.findById(studentId)
+                        .orElseThrow(() -> new ApiException("User not found", HttpStatus.NOT_FOUND));
+                int attemptNumber = quizAttemptRepository.countByLessonIdAndStudentId(primaryLessonId, studentId) + 1;
+                String answersJson;
+                try {
+                    answersJson = objectMapper.writeValueAsString(answerRecords);
+                } catch (com.fasterxml.jackson.core.JsonProcessingException e) {
+                    answersJson = "{}";
+                }
+                quizAttemptRepository.save(com.hango.hango_backend.entity.LessonQuizAttempt.builder()
+                        .lesson(quizLesson)
+                        .student(attemptStudent)
+                        .score((double) score)
+                        .attemptNumber(attemptNumber)
+                        .state(ATTEMPT_STATE_MASTERY)
+                        .answersJson(answersJson)
+                        .submittedAt(java.time.LocalDateTime.now())
+                        .build());
+            }
+        } else {
+            log.warn("Mastery submitted for node {} but course {} has no quiz lesson; only node fields updated", nodeId,
+                    courseId);
+        }
+
+        int passingScore = MASTERY_PASS_SCORE;
+        if (primaryLessonId != null) {
+            Lesson quizLesson = lessonRepository.findById(primaryLessonId).orElse(null);
+            if (quizLesson != null && quizLesson.getExam() != null && quizLesson.getExam().getPassingScore() != null) {
+                passingScore = (int) Math.round(quizLesson.getExam().getPassingScore());
+            }
+        }
+        
+        applyMasteryResult(node, score, passingScore);
+        
+        // Fast-track logic: if pass, mark as completed
+        if (score >= passingScore) {
+            node.setStatus("COMPLETED");
+            node.setNodeType("FAST_TRACKED"); // Bypass lesson progress checks in the future
+
+            // Unlock next node
+            pathway.getNodes().stream()
+                    .filter(n -> n.getStepOrder() == node.getStepOrder() + 1)
+                    .findFirst()
+                    .ifPresent(next -> {
+                        if ("LOCKED".equalsIgnoreCase(next.getStatus())) {
+                            next.setStatus("IN_PROGRESS");
+                        }
+                    });
+        }
+        
+        learningPathwayRepository.save(pathway);
+        return com.hango.hango_backend.dto.MasterySubmitResponseDTO.builder()
+                .pathway(toResponseDto(pathway, studentId))
+                .evaluations(evaluations)
+                .build();
+    }
+
+    /**
+     * Lesson co cau hoi quiz cua course, uu tien FINAL_QUIZ, sap xep giam dan theo
+     * thu tu bai.
+     */
+    private List<Long> resolveQuizLessonIds(Long courseId) {
+        return jdbcTemplate.queryForList(
+                "SELECT l.id FROM lessons l " +
+                        "JOIN sections s ON l.section_id = s.id " +
+                        "WHERE s.course_id = ? AND l.deleted_at IS NULL " +
+                        "AND EXISTS (SELECT 1 FROM lesson_quizzes lq WHERE lq.lesson_id = l.id) " +
+                        "ORDER BY (l.lesson_type = ?) DESC, l.display_order DESC",
+                Long.class, courseId, LESSON_TYPE_FINAL_QUIZ);
+    }
+
+    /**
+     * Doc cau hoi + options tu lesson_quizzes; KHONG tra correctIndex/explanation
+     * ra ngoai.
+     */
+    private List<com.hango.hango_backend.dto.MasteryQuestionDTO> loadQuestionsFromLessonQuizzes(
+            List<Long> lessonIds, int limit) {
+        String inClause = lessonIds.stream().map(String::valueOf).collect(Collectors.joining(","));
+        List<Long> questionIds = jdbcTemplate.queryForList(
+                "SELECT DISTINCT q.id FROM questions q " +
+                        "JOIN lesson_quizzes lq ON q.id = lq.question_id " +
+                        "WHERE lq.lesson_id IN (" + inClause + ") " +
+                        "AND (q.usage_type = '1' OR q.usage_type = 'QUIZ_ONLY' OR q.usage_type = '3' OR q.usage_type = 'BOTH') " +
+                        "AND q.group_id IS NULL " +
+                        "ORDER BY RAND() LIMIT ?",
+                Long.class, limit);
+        return buildQuestionDtos(questionIds);
+    }
+
+    private List<com.hango.hango_backend.dto.MasteryQuestionDTO> loadQuestionsFromBank(String category, int limit) {
+        List<Long> questionIds;
+        if (category != null && !category.isBlank()) {
+            questionIds = jdbcTemplate.queryForList(
+                    "SELECT q.id FROM questions q " +
+                            "JOIN system_parameters sk ON q.skill_param_id = sk.id AND q.status = 'APPROVED' " +
+                            "WHERE UPPER(sk.param_value) IN (" +
+                            "  SELECT UPPER(sp.param_key) FROM system_parameters sp " +
+                            "  WHERE sp.param_type = 'SKILL_CATEGORY_MAP' AND UPPER(sp.param_value) = UPPER(?)" +
+                            ") AND (q.usage_type = '1' OR q.usage_type = 'QUIZ_ONLY' OR q.usage_type = '3' OR q.usage_type = 'BOTH') AND q.group_id IS NULL ORDER BY RAND() LIMIT ?",
+                    Long.class, category.trim(), limit);
+            if (!questionIds.isEmpty()) {
+                return buildQuestionDtos(questionIds);
+            }
+        }
+        // Cuoi cung: bat ky cau APPROVED nao
+        try {
+            questionIds = jdbcTemplate.queryForList(
+                    "SELECT id FROM questions WHERE status = 'APPROVED' AND (usage_type = '1' OR usage_type = 'QUIZ_ONLY' OR usage_type = '3' OR usage_type = 'BOTH') AND group_id IS NULL ORDER BY RAND() LIMIT ?",
+                    Long.class, limit);
+        } catch (Exception e) {
+            questionIds = jdbcTemplate.queryForList(
+                    "SELECT id FROM questions WHERE (usage_type = '1' OR usage_type = 'QUIZ_ONLY' OR usage_type = '3' OR usage_type = 'BOTH') AND group_id IS NULL ORDER BY RAND() LIMIT ?", Long.class, limit);
+        }
+        return buildQuestionDtos(questionIds);
+    }
+
+    private List<com.hango.hango_backend.dto.MasteryQuestionDTO> buildQuestionDtos(List<Long> questionIds) {
+        List<com.hango.hango_backend.dto.MasteryQuestionDTO> result = new ArrayList<>();
+        for (Long qId : questionIds) {
+            List<Map<String, Object>> rows = jdbcTemplate.queryForList(
+                    "SELECT q.question_text, qg.context_text AS passage " +
+                            "FROM questions q LEFT JOIN question_groups qg ON q.group_id = qg.id " +
+                            "WHERE q.id = ?",
+                    qId);
+            if (rows.isEmpty())
+                continue;
+            List<Map<String, Object>> optionsData = jdbcTemplate.queryForList(
+                    "SELECT option_text, is_correct FROM question_options WHERE question_id = ? ORDER BY id ASC",
+                    qId);
+            if (optionsData.isEmpty())
+                continue;
+
+            List<String> options = new ArrayList<>();
+            int correctCount = 0;
+            for (Map<String, Object> optRow : optionsData) {
+                options.add((String) optRow.get("option_text"));
+                Boolean isCorrect = (Boolean) optRow.get("is_correct");
+                if (isCorrect != null && isCorrect) correctCount++;
+            }
+
+            Object passageObj = rows.get(0).get("passage");
+            if (passageObj == null) {
+                passageObj = rows.get(0).get("context_text");
+            }
+            
+            result.add(com.hango.hango_backend.dto.MasteryQuestionDTO.builder()
+                    .questionId(qId)
+                    .questionText((String) rows.get(0).get("question_text"))
+                    .passage((String) passageObj)
+                    .options(options)
+                    .isMultipleChoice(correctCount > 1)
+                    .build());
+        }
+        return result;
+    }
+
+    /**
+     * Ap ket qua mastery vao node: >=80 thi mastered + tang chu ky on tap
+     * 1->3->7->14->30 ngay.
+     */
+    private void applyMasteryResult(PathwayNode node, Integer score, int passingScore) {
+        node.setMasteryScore(score);
+        if (score != null && score >= passingScore) {
+            node.setIsMastered(true);
+            if (node.getReviewIntervalDays() == null) {
+                node.setReviewIntervalDays(1);
+            } else {
+                int current = node.getReviewIntervalDays();
+                if (current == 1)
+                    node.setReviewIntervalDays(3);
+                else if (current == 3)
+                    node.setReviewIntervalDays(7);
+                else if (current == 7)
+                    node.setReviewIntervalDays(14);
+                else if (current == 14)
+                    node.setReviewIntervalDays(30);
+            }
+            node.setNextReviewDate(java.time.LocalDateTime.now().plusDays(node.getReviewIntervalDays()));
+        } else {
+            node.setIsMastered(false);
+        }
+    }
+
+    @Transactional
+    public LearningPathwayResponseDTO submitNodeMastery(Long pathwayId, Long nodeId, Long studentId,
+            com.hango.hango_backend.dto.MasterySubmitRequestDTO request) {
         LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
                 .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
 
@@ -654,40 +1195,44 @@ public class LearningPathwayService {
                 .findFirst()
                 .orElseThrow(() -> new ApiException("Node not found in pathway", HttpStatus.NOT_FOUND));
 
-        node.setMasteryScore(request.getScore());
-        
-        if (request.getScore() != null && request.getScore() >= 80) { // Assuming 80 is the mastery threshold
-            node.setIsMastered(true);
-            
-            // Spaced Repetition logic
-            if (node.getReviewIntervalDays() == null) {
-                node.setReviewIntervalDays(1);
-            } else {
-                // simple progression: 1 -> 3 -> 7 -> 14 -> 30
-                int current = node.getReviewIntervalDays();
-                if (current == 1) node.setReviewIntervalDays(3);
-                else if (current == 3) node.setReviewIntervalDays(7);
-                else if (current == 7) node.setReviewIntervalDays(14);
-                else if (current == 14) node.setReviewIntervalDays(30);
-            }
-            node.setNextReviewDate(java.time.LocalDateTime.now().plusDays(node.getReviewIntervalDays()));
-            pathway.setMentorSummary("Congratulations on achieving Mastery! This course is scheduled for review in " + node.getReviewIntervalDays() + " days.");
-        } else {
-            node.setIsMastered(false);
-            pathway.setMentorSummary("Your score is " + request.getScore() + ". You need 80 points to Master the course. Keep reviewing!");
+        // B3: validate score hop le truoc khi ap dung
+        if (request.getScore() == null || request.getScore() < 0 || request.getScore() > 100) {
+            throw new ApiException("Score must be between 0 and 100", HttpStatus.BAD_REQUEST);
         }
+
+        Course effectiveCourse = resolveEffectiveCourse(studentId, node.getCourse());
+        Course course = effectiveCourse != null ? effectiveCourse : node.getCourse();
+        Long courseId = course != null ? course.getId() : null;
+        int passingScore = MASTERY_PASS_SCORE;
+        List<Long> quizLessonIds = courseId != null ? resolveQuizLessonIds(courseId) : Collections.emptyList();
+        Long primaryLessonId = !quizLessonIds.isEmpty() ? quizLessonIds.get(0) : null;
+        if (primaryLessonId != null) {
+            Lesson quizLesson = lessonRepository.findById(primaryLessonId).orElse(null);
+            if (quizLesson != null && quizLesson.getExam() != null && quizLesson.getExam().getPassingScore() != null) {
+                passingScore = (int) Math.round(quizLesson.getExam().getPassingScore());
+            }
+        }
+
+        applyMasteryResult(node, request.getScore(), passingScore);
+        pathway.setMentorSummary(Boolean.TRUE.equals(node.getIsMastered())
+                ? "Congratulations on achieving Mastery! This course is scheduled for review in "
+                        + node.getReviewIntervalDays() + " days."
+                : "Your score is " + request.getScore() + ". You need " + passingScore
+                        + " points to Master the course. Keep reviewing!");
 
         return toResponseDto(pathway, studentId);
     }
 
     /**
-     * Calculates the real course completion percentage for a given learner and course,
+     * Calculates the real course completion percentage for a given learner and
+     * course,
      * based on actual LessonProgress records stored in the DB.
      */
     private int calculateCourseProgressPercent(Long studentId, Long courseId) {
         try {
             long totalLessons = lessonRepository.countByCourseId(courseId);
-            if (totalLessons == 0) return 0;
+            if (totalLessons == 0)
+                return 0;
             long completedLessons = countCompletedLessons(studentId, courseId);
             return (int) Math.min(100, Math.round((double) completedLessons / totalLessons * 100));
         } catch (Exception e) {
@@ -715,10 +1260,14 @@ public class LearningPathwayService {
     }
 
     private void archiveActivePathway(Long studentId) {
-        Optional<LearningPathway> existingPathway = learningPathwayRepository.findByStudentIdAndStatus(studentId, "ACTIVE");
+        // @OneToOne voi exam_attempt: phai go bo tham chieu cu truoc khi pathway moi
+        // duoc dung lai cung examAttemptId, neu roi vao constraint violation
+        Optional<LearningPathway> existingPathway = learningPathwayRepository.findByStudentIdAndStatus(studentId,
+                "ACTIVE");
         existingPathway.ifPresent(pathway -> {
             pathway.setStatus("ARCHIVED");
-            pathway.setExamAttempt(null); // Clear reference so the new pathway can reuse the same examAttemptId (@OneToOne constraint)
+            pathway.setExamAttempt(null); // Clear reference so the new pathway can reuse the same examAttemptId
+                                          // (@OneToOne constraint)
             learningPathwayRepository.saveAndFlush(pathway);
         });
     }
@@ -728,11 +1277,11 @@ public class LearningPathwayService {
             List<Course> availableCourses,
             boolean usingExistingCoursesFallback,
             List<String> weakCategories) {
-        
+
         // Prioritize courses matching weak categories
-        List<Course> prioritizedCourses = new java.util.ArrayList<>();
-        List<Course> otherCourses = new java.util.ArrayList<>();
-        
+        List<Course> prioritizedCourses = new ArrayList<>();
+        List<Course> otherCourses = new ArrayList<>();
+
         for (Course course : availableCourses) {
             if (course.getCategory() != null && weakCategories.contains(course.getCategory().getParamValue())) {
                 prioritizedCourses.add(course);
@@ -740,8 +1289,8 @@ public class LearningPathwayService {
                 otherCourses.add(course);
             }
         }
-        
-        List<Course> selectedCourses = new java.util.ArrayList<>();
+
+        List<Course> selectedCourses = new ArrayList<>();
         selectedCourses.addAll(prioritizedCourses);
         selectedCourses.addAll(otherCourses);
 
@@ -749,7 +1298,7 @@ public class LearningPathwayService {
         return LearningPathwayResponseDTO.builder()
                 .roadmapId("AUTO_GEN")
                 .mentorSummary(usingExistingCoursesFallback
-                        ? "Tôi đã tạo một lộ trình khởi đầu từ các khóa học hiện có trong HanGo. Vui lòng đăng tải thêm khóa học để có được những gợi ý chính xác hơn."
+                ? "Tôi đã tạo một lộ trình khởi đầu từ các khóa học hiện có trong HanGo. Vui lòng đăng tải thêm khóa học để có được những gợi ý chính xác hơn."
                         : "Tôi đã tạo một lộ trình khởi đầu tập trung vào các điểm yếu của bạn từ bài kiểm tra gần nhất.")
                 .nodes(selectedCourses.stream()
                         .limit(4)
@@ -759,6 +1308,7 @@ public class LearningPathwayService {
                                     .step(currentStep)
                                     .courseId(course.getId())
                                     .courseTitle(course.getTitle())
+                                    .difficulty(course.getDifficulty() != null ? course.getDifficulty().getParamValue() : "N/A")
                                     .status(currentStep == 1 ? "IN_PROGRESS" : "LOCKED")
                                     .reasonWhy(defaultReasonForCourse(course, examAttempt))
                                     .progressPercent(0)
@@ -801,14 +1351,16 @@ public class LearningPathwayService {
                 ? " Điểm số của bạn gần đây nhất là " + examAttempt.getScore() + "."
                 : "";
         String category = course.getCategory() != null ? course.getCategory().getParamValue() : "this topic";
-        return "Khóa học này giúp bạn củng cố thêm về " + category + " dựa trên kết quả gần đây nhất của bạn." + scoreText;
+        return "Khóa học này giúp bạn củng cố thêm về " + category + " dựa trên kết quả gần đây nhất của bạn."
+                + scoreText;
     }
 
     private List<String> extractWeakCategories(String knowledgeGapsJson) {
-        if (knowledgeGapsJson == null || knowledgeGapsJson.isBlank()) return Collections.emptyList();
+        if (knowledgeGapsJson == null || knowledgeGapsJson.isBlank())
+            return Collections.emptyList();
         try {
             @SuppressWarnings("unchecked")
-            java.util.Map<String, Object> map = objectMapper.readValue(knowledgeGapsJson, java.util.Map.class);
+            Map<String, Object> map = objectMapper.readValue(knowledgeGapsJson, Map.class);
             Object weakCategoriesObj = map.get("weak_categories");
             if (weakCategoriesObj instanceof List<?> list) {
                 return list.stream().map(Object::toString).toList();
@@ -820,10 +1372,11 @@ public class LearningPathwayService {
     }
 
     private List<String> extractLatestWeakCategories(String knowledgeGapsJson) {
-        if (knowledgeGapsJson == null || knowledgeGapsJson.isBlank()) return Collections.emptyList();
+        if (knowledgeGapsJson == null || knowledgeGapsJson.isBlank())
+            return Collections.emptyList();
         try {
             @SuppressWarnings("unchecked")
-            java.util.Map<String, Object> map = objectMapper.readValue(knowledgeGapsJson, java.util.Map.class);
+            Map<String, Object> map = objectMapper.readValue(knowledgeGapsJson, Map.class);
             Object weakCategoriesObj = map.get("latest_weak_categories");
             if (weakCategoriesObj instanceof List<?> list) {
                 return list.stream().map(Object::toString).toList();
@@ -832,6 +1385,122 @@ public class LearningPathwayService {
             log.debug("Failed to extract latest weak categories from knowledge gaps json: {}", e.getMessage());
         }
         return Collections.emptyList();
+    }
+
+    @Transactional
+    public LearningPathwayResponseDTO skipNode(Long pathwayId, Long nodeId, Long studentId) {
+        LearningPathway pathway = learningPathwayRepository.findById(pathwayId)
+                .orElseThrow(() -> new ApiException("Pathway not found", HttpStatus.NOT_FOUND));
+
+        if (!pathway.getStudent().getId().equals(studentId)) {
+            throw new ApiException("Access denied", HttpStatus.FORBIDDEN);
+        }
+
+        PathwayNode nodeToSkip = pathway.getNodes().stream()
+                .filter(n -> n.getId().equals(nodeId))
+                .findFirst()
+                .orElseThrow(() -> new ApiException("Node not found", HttpStatus.NOT_FOUND));
+
+        nodeToSkip.setStatus("COMPLETED");
+        nodeToSkip.setNodeType("SKIPPED");
+        nodeToSkip.setSkippedAt(java.time.LocalDateTime.now());
+        
+        // Unlock next node
+        pathway.getNodes().stream()
+                .filter(n -> n.getStepOrder() == nodeToSkip.getStepOrder() + 1)
+                .findFirst()
+                .ifPresent(next -> {
+                    if ("LOCKED".equalsIgnoreCase(next.getStatus())) {
+                        next.setStatus("IN_PROGRESS");
+                    }
+                });
+        
+        learningPathwayRepository.save(pathway);
+        
+        return toResponseDto(pathway, studentId);
+    }
+
+    private Course resolveEffectiveCourse(Long studentId, Course course) {
+        if (course == null) return null;
+        if (studentId != null && enrollmentRepository != null) {
+            try {
+                List<Enrollment> familyE = enrollmentRepository.findFamilyEnrollments(studentId, course.getId());
+                if (familyE != null && !familyE.isEmpty()) {
+                    if (familyE.size() == 1 && familyE.get(0).getCourse() != null) {
+                        return familyE.get(0).getCourse();
+                    }
+                    // If multiple enrollments in family, pick the one with most completed lessons
+                    Enrollment best = null;
+                    long maxCompleted = -1;
+                    for (Enrollment e : familyE) {
+                        if (e.getCourse() == null) continue;
+                        long completed = countCompletedLessons(studentId, e.getCourse().getId());
+                        if (completed > maxCompleted) {
+                            maxCompleted = completed;
+                            best = e;
+                        }
+                    }
+                    if (best != null && best.getCourse() != null) {
+                        return best.getCourse();
+                    }
+                }
+            } catch (Exception e) {
+                log.debug("Could not resolve family enrollment for course {}: {}", course.getId(), e.getMessage());
+            }
+        }
+        if (course.getLatestVersionId() != null && !course.getLatestVersionId().equals(course.getId()) && courseRepository != null) {
+            try {
+                Optional<Course> latestOpt = courseRepository.findById(course.getLatestVersionId());
+                if (latestOpt != null && latestOpt.isPresent() && "PUBLISHED".equalsIgnoreCase(latestOpt.get().getStatus()) && latestOpt.get().getDeletedAt() == null) {
+                    return latestOpt.get();
+                }
+            } catch (Exception e) {
+                log.debug("Could not resolve latest version for course {}: {}", course.getId(), e.getMessage());
+            }
+        }
+        return course;
+    }
+
+    private List<Course> deduplicateCourseVersions(Long studentId, List<Course> courses) {
+        if (courses == null || courses.isEmpty()) return Collections.emptyList();
+        Map<String, List<Course>> byFamily = new LinkedHashMap<>();
+        for (Course c : courses) {
+            if (c == null) continue;
+            String key = (c.getCode() != null && !c.getCode().isBlank())
+                    ? toBaseCourseCode(c.getCode())
+                    : (c.getTitle() != null && !c.getTitle().isBlank() ? c.getTitle().trim().toLowerCase() : String.valueOf(c.getId()));
+            byFamily.computeIfAbsent(key, k -> new ArrayList<>()).add(c);
+        }
+        List<Course> deduplicated = new ArrayList<>();
+        for (List<Course> family : byFamily.values()) {
+            if (family.size() == 1) {
+                deduplicated.add(family.get(0));
+                continue;
+            }
+            Course selected = null;
+            if (studentId != null && enrollmentRepository != null) {
+                for (Course c : family) {
+                    try {
+                        if (c.getId() != null && enrollmentRepository.existsByUserIdAndCourseId(studentId, c.getId())) {
+                            selected = c;
+                            break;
+                        }
+                    } catch (Exception ignored) {}
+                }
+            }
+            if (selected == null) {
+                selected = family.stream()
+                        .max(Comparator.comparing(c -> c.getId() != null ? c.getId() : 0L))
+                        .orElse(family.get(0));
+            }
+            deduplicated.add(selected);
+        }
+        return deduplicated;
+    }
+
+    private static String toBaseCourseCode(String code) {
+        if (code == null || code.isBlank()) return "";
+        return code.replaceAll("(?i)-V\\d+.*$", "").toUpperCase();
     }
 }
 
